--- a/canvas_modules/common-canvas/assets/styles/field-picker.scss
+++ b/canvas_modules/common-canvas/assets/styles/field-picker.scss
@@ -7,19 +7,46 @@
  * Contract with IBM Corp.
  *******************************************************************************/
 
+.rightside-modal-container #field-picker-table .modal__buttons {
+	position: absolute;
+	border-top: unset;
+	padding-top: 7px;
+	z-index: 1;
+}
+
 .rightside-modal-container #field-picker-table #flexible-table-container-wrapper {
 	height: 100%;
-	overflow-y: auto;
+
+	// this can be removed after bootstrap.css is gone
+	.field-picker-data-rows td {
+		border-top: 0;
+	}
 }
 
 .rightside-modal-container #field-picker-table .flexible-table-container-absolute {
-	height: 498px;
+	height: 450px;
 }
 
 .field-picker-checkbox {
 	width: 20px;
+	position: relative;
+
+	// position checkbox within row
+	label {
+		padding-bottom: 10px;
+		top: -2px;
+	}
 }
 
-tr.field-picker-data-rows {
-	border-bottom: 1px solid #DFE3E6;
+.field-picker-data {
+	height: 100%;
+	display: flex;
+	align-items: center;
+}
+
+.field-picker-data-type-icon {
+	width: 15px;
+	height: 15px;
+	float: left;
+	margin-right: 5px;
 }
